--- a/index.css
+++ b/index.css
@@ -112,3 +112,27 @@ body {
 .toggle-lights-btn:hover {
     background-color: #45a049;
 }
+
+.message {
+  font-size: 2em;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 50px;
+  animation: fadeInOut 3s infinite;
+  text-shadow: 2px 2px 5px red, -2px -2px 5px green;
+}
+
+@keyframes fadeInOut {
+  0%, 100% {
+      opacity: 0;
+      transform: scale(0.9);
+  }
+  50% {
+      opacity: 1;
+      transform: scale(1);
+  }
+}
+
+
