--- a/index.css
+++ b/index.css
@@ -136,3 +136,23 @@ body {
 }
 
 
+.firework {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  background: white;
+  border-radius: 50%;
+  pointer-events: none;
+  animation: explode 1.5s ease-out forwards;
+}
+
+@keyframes explode {
+  from {
+      transform: translate(0, 0) scale(1);
+      opacity: 1;
+  }
+  to {
+      transform: translate(var(--dx), var(--dy)) scale(0.5);
+      opacity: 0;
+  }
+}
